# agglomerative_partioning

./: PKG-INFO  README.md  pyproject.toml  setup.py
agglomerative_partitioning/: __init__.py  main.py
